--- a/.env
+++ b/.env
@@ -1,7 +1,4 @@
 PORT = 4000
-MONGODB_URL = mongodb+srv://TheInternetFolks:JpWgDfPGQpl62bdM@cluster0.invhpq0.mongodb.net/TheInternetFolksDB
+MONGODB_URL = 
 
-JWT_SECRET = "InternetFolks"
-
-# TheInternetFolks
-# JpWgDfPGQpl62bdM
+JWT_SECRET = ""
